Progress bar and Icons were added. Needed to create new divs to have everyting align correctly. Deleted 45% height on project-cards so the wrapping would work.

--- a/taskflow-app/src/CSS/Project.css
+++ b/taskflow-app/src/CSS/Project.css
@@ -10,3 +10,190 @@
     z-index: 6;
 
  }
+
+ .projects {
+  display: grid;
+  grid-template-rows: 2 repeat(1);
+  gap: 10px;
+  width: 100%;
+ }
+
+
+ .project-cards {
+   width: 100%;
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+   overflow-x: hidden;
+   gap: 5px;
+
+ }
+
+ .cora-design, 
+ .cora-marketing,
+ .cora-research {
+   width: 285px;
+   height: auto;
+   background-color: #fff;
+   border-radius: 10px;
+   font-family: Inter;
+   font-weight: bold;
+ }
+
+ .cora-design:focus, 
+ .cora-marketing:focus,
+ .cora-research:focus {
+   box-shadow: 0px 4px 15px rgba(0,0,0,0.5);
+
+ }
+
+ .cora-design > .project-header,
+ .cora-marketing > .project-header,
+ .cora-research > .project-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px
+ }
+
+ .cora-design > .project-header > .members,
+ .cora-marketing > .project-header > .members,
+ .cora-research > .project-header > .members {
+    display: flex;
+ }
+
+ .cora-design > .project-header > .members > .circle-1, .circle-2, .circle-3,
+ .cora-marketing > .project-header > .members > .circle-1, .circle-2, .circle-3,
+ .cora-research > .project-header > .members > .circle-1, .circle-2, .circle-3 {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    background-color: #C4C4C4;
+    margin-left: -10px;
+    margin-top: 10px;
+ }
+
+ /* Example colors for different projects */
+
+ /* Design Project */
+ .cora-design > .project-header > .members > .circle-1 {
+    background-color: #D60000;
+ }
+
+  .cora-design > .project-header > .members > .circle-2 {
+      background-color: #00A81F;
+  }
+
+  .cora-design > .project-header > .members > .circle-3 {
+      background-color: #2D68FF;
+  }
+
+/* Marketing Project */
+.cora-marketing > .project-header > .members > .circle-1 {
+    background-color: #F59226;
+ }
+
+  .cora-marketing > .project-header > .members > .circle-2 {
+      background-color: #8700A8;
+  }
+
+  .cora-marketing > .project-header > .members > .circle-3 {
+      background-color: #CECE12;
+  }
+/* Research Project */
+.cora-research > .project-header > .members > .circle-1 {
+    background-color: #8700A8;  
+  }
+  .cora-research > .project-header > .members > .circle-2 {
+      background-color: #D60000;
+  }   
+  .cora-research > .project-header > .members > .circle-3 {
+      background-color: #F59226;
+  }
+
+ .cora-design > p,
+ .cora-marketing > p,
+ .cora-research > p {
+    padding-left: 10px;
+ }
+
+ .cora-design > .progress-bar,
+ .cora-marketing > .progress-bar,
+ .cora-research > .progress-bar {
+    width: 90%;
+    height: 10px;
+    background-color: #E0E0E0;
+    border-radius: 10px;
+    margin: 10px auto;
+    position: relative;
+ }
+
+ .cora-design > .progress-bar > .progress {
+      width: 40%;
+      height: 10px;
+      background-image: linear-gradient(90deg, #6265F7,#A24DEC);
+      border-radius: 10px;
+      position: absolute;
+      top: 0;
+      left: 0;
+  }
+  .cora-research > .progress-bar > .progress {
+      width: 70%;
+      height: 10px;
+      background-image: linear-gradient(90deg,  #6265F7,#A24DEC);
+      border-radius: 10px;
+      position: absolute;
+      top: 0;
+      left: 0;
+  }
+  
+ .cora-marketing > .progress-bar > .progress {
+      width: 90%;
+      height: 10px;
+      background-image: linear-gradient(90deg,  #6265F7,#A24DEC);
+      border-radius: 10px;
+      position: absolute;
+      top: 0;
+      left: 0;
+  }
+
+
+
+ 
+ .project-stats {
+  display: flex;
+  width: 100%;
+  height: 350px;
+  margin-top: 10px;
+  gap: 5px;
+ }
+
+ .link-container {
+    width: 50%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 5px;
+    background-color: #fff;
+    border-radius: 10px;
+
+
+ }
+
+ .link-header {
+
+ }
+
+ .inbox-container {
+  width: 50%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 5px;
+    background-color: #fff;
+    border-radius: 10px;
+
+
+ }
